<resources>
    <string name="app_name">Serafim Play</string>
    <string name="text_default">text</string>
    <string name="facebook_application_id">486793785229111</string>
    <string name="facebook_app_id">486793785229111</string>
    <string name="product">Product</string>
    <string name="log_in">Login</string>
    <string name="log_out">Logout</string>
    <string name="register">Register</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="reconfirm_password_hint">enter the password again.</string>
    <string name="confirm">Confirm</string>
    <string name="main_page">Main</string>
    <string name="featured">Featured</string>
    <string name="ble">Bluetooth</string>
    <string name="paired_device">Paired devices</string>
    <string name="connect_device">Disconnected</string>
    <string name="disconnect_device">Connected</string>
    <string name="operation">Manual</string>
    <string name="shop_mall">Shop</string>
    <string name="more">More></string>
    <string name="moto">Bike</string>
    <string name="racing">Racing</string>
    <string name="download">Download</string>
    <string name="get">Get</string>
    <string name="press_one_more">Press again to leave.</string>
    <string name="ble_did_not_connect_service">Please turn on the power of Serafim device.</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="connected_success">Successfully connected.</string>
    <string name="connected_fail">Failed to connect to the device.</string>
    <string name="no_internet_connected">No Internet connection.</string>
    <string name="check_locale">Identifying your location&#8230;</string>
    <string name="connect_shop">Connecting to shop&#8230;</string>
    <string name="connect_shop_fail">Failed to connect to shop page.</string>
    <string name="check_target_image_ver">Checking FW version&#8230;</string>
    <string name="download_fw_file">Downloading FW file&#8230;</string>
    <string name="new_s1_fw_version_available">New Serafim S1 controller firmware is available to download</string>
    <string name="update_info">New firmware feature</string>
    <string name="fw_update">Update</string>
    <string name="fw_updatable">Available to update</string>
    <string name="fw_update_not_ready">FW updater is not ready. Please try again later.</string>
    <string name="fw_is_newest">Your firmware is up-to-date!</string>
    <string name="update_completed">Update completed</string>
    <string name="update_completed_information">Please restart bluetooth and bind the S1 gamepad again, then shut down and restart SerafimPlay.</string>
    <string name="updated_failed">Updated failed</string>
    <string name="updated_failed_information">please make sure the gamepad isn\'t binded, and shut down and restart SerafimPlay to resume update.</string>
    <string name="downloading_update_files">Downloading update files…</string>
    <string name="loading_update_files">Loading update files…</string>
    <string name="switching_controller">Switching controller to updated mode…</string>
    <string name="searching_controller">Searching for update mode controller…</string>
    <string name="searching_controller_decide">There is currently no controller connection. Do you want to scan the update mode controller?</string>
    <string name="notification">Notifications</string>
    <string name="fw_update_option">Bluetooth FW update</string>
    <string name="sign_out">Logout</string>
    <string name="wx_share">Share it on Wechat</string>
    <string name="fb_share">Share it on Facebook</string>
    <string name="wx_share_to_friend">Share to a friend</string>
    <string name="wx_share_to_moment">Share to Moment</string>
    <string name="wx_share_type">Share this via:</string>
    <string name="app_version">App version</string>
    <string name="game">Game</string>
    <string name="new_version_available">New version is available to download.</string>
    <string name="update_to_new_version">Please update to the latest version.</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="email_login_successful">Successfully login with email.</string>
    <string name="email_login_failed">Failed to login with email. Plese try again later.</string>
    <string name="fb_login_successful">Successfully login with Facebook.</string>
    <string name="fb_login_failed">Failed to login with Facebook. Please try again later.</string>
    <string name="google_login_successful">Successfully login with Google.</string>
    <string name="google_login_failed">Failed to login with Google. Please try again later.</string>
    <string name="wx_login_successful">Successfully login with Wechat.</string>
    <string name="wx_login_failed">Failed to login with Wechat. Please try again later.</string>
    <string name="no_email_input">Please enter an Email.</string>
    <string name="no_password_input">Please enter a password.</string>
    <string name="password_reconfirm">Please enter the password again.</string>
    <string name="registration_successful">Successfully registered!</string>
    <string name="registration_failed">Failed to register. Please try again later.</string>
    <string name="reconfirm_failed">The password you entered doesn\'t match.</string>
    <string name="please_verify_email">Please verify your email first.</string>
    <string name="login">Log In&#8230;</string>
    <string name="wx_not_installed">Please install Wechat app first.</string>
    <string name="verification_send">Verification email sent to </string>
    <string name="verification_send_fail">Failed to send verification email.</string>
    <string name="access_usage_permission">Serafim Play needs usage acess to initialize button mapping for games. You could authorize this in the phone settings.</string>
    <string name="access_overlay_permission">Please allow Serafim Play to be displayed on top of other applications. This permission is used to open floating windows for play settings.</string>
    <string name="access_location_permission">Please permit usage access of position for Serafim play, which is used for bluetooth scanning.</string>
    <string name="goToAppSetting">Please allow SerafimPlay to access location permissions. Without this permission, SerafimPlay will not be able to connect to Bluetooth.</string>
    <string name="access_WRITE_EXTERNAL_STORAGE">Please permit usage access of data files for Serafim play, which is used to confirm the game settings of users.</string>
    <string name="password_length">Password must contain at least six characters.</string>
    <string name="refresh">Swipe down to refresh.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="initialize">Initializing&#8230;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="customize">Customize</string>
    <string name="profiles_text">Profiles</string>
    <string name="profiles_name">Profiles name</string>
    <string name="input_blank">Input cannot be blank</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="setting">Setting</string>
    <string name="show_custom_overlay">Show customization overlay</string>
    <string name="bind_to_current_q">Bind the mapping to the current application now?</string>
    <string name="confirm_to_remove_q">Confirm to remove?</string>
    <string name="floating_window_permission">Please allow displaying floating window for Serafim Play in Permission settings</string>
    <string name="inverted">inverted</string>
    <string name="rotation_speed">rotation speed:&#160;</string>
    <string name="sliding_speed">sliding speed:&#160;</string>
    <string name="types_of_sliding">Type of sliding</string>
    <string name="sliding_type1">Press to start sliding</string>
    <string name="sliding_type2">Release to start sliding</string>
    <string name="sliding_type3">Hold to slide; release to stop</string>
    <string name="types_of_stick">Type of stick</string>
    <string name="stick_type1">Left stick</string>
    <string name="stick_type2">Right stick</string>
    <string name="stick_type3">Any stick</string>
    <string name="tapping_frequency">tapping frequency:&#160;</string>
    <string name="slowest">slowest</string>
    <string name="slow">slow</string>
    <string name="moderate">moderate</string>
    <string name="fast">fast</string>
    <string name="fastest">fastest</string>
    <string name="macro_preset">macro preset</string>
    <string name="stick_function_description1">Tap the screen once</string>
    <string name="stick_function_description2">Press a target button and move left stick around the pressed button</string>
    <string name="stick_function_description3">Press a target button and move right stick around the pressed button</string>
    <string name="stick_function_description4">Press a target button and move chosen stick around the pressed button.</string>
    <string name="stick_function_description5">Press a target button to trigger two positions on screen simultaneously</string>
    <string name="stick_function_description6">Press a target button to trigger button 1, and then release the button for triggering button 2</string>
    <string name="stick_function_description7">Press a target button and move right stick to look around</string>
    <string name="stick_function_description8">Press a target button to slide from one end to another</string>
    <string name="stick_function_description9">Keep tapping the screen</string>
    <string name="stick_function_description10">Pick a button from LB, RB, LT, RT as a trigger. After doing this, keep holding the trigger you have set and then press a button you\'d like to bind</string>
    <string name="stick_function_description11">radius:</string>
    <string name="stick_function_description12">rotation speed:&#160;</string>
    <string name="stick_function_description13">joystick sensitivity:&#160;</string>
    <string name="stick_function_description14">Press a target button to trigger the selected macro</string>
    <string name="stick_function_name1">Normal touch</string>
    <string name="stick_function_name2">Bind LS</string>
    <string name="stick_function_name3">Bind RS</string>
    <string name="stick_function_name4">Bind Stick</string>
    <string name="stick_function_name5">Dual-use</string>
    <string name="stick_function_name6">Sequence</string>
    <string name="stick_function_name7">Bind camera</string>
    <string name="stick_function_name8">Sliding</string>
    <string name="stick_function_name9">Turbo</string>
    <string name="stick_function_name10">Key comb.</string>
    <string name="stick_function_name11">Adjust radius</string>
    <string name="stick_function_name12">Rotation speed</string>
    <string name="stick_function_name13">Binding macro</string>
    <string name="macros">Macros</string>
    <string name="save_macros">Save the recorded macros</string>
    <string name="save">Save</string>
    <string name="macros_setting">Macros setting</string>
    <string name="record">Record</string>
    <string name="play_once">Play once</string>
    <string name="play_loop">Play in a loop</string>
    <string name="customize_playback">Customize playback</string>
    <string name="play_interval">Interval (sec)</string>
    <string name="start">Start</string>
    <string name="count">Count</string>
    <string name="Button_press_time">Button press time(sec)</string>
    <string name="Interval_from_last_button">Interval with last button(sec)</string>
    <string name="Macro_mode">Macro mode</string>
    <string name="Record">Record</string>
    <string name="Custom">Custom</string>
    <string name="Reset">Reset</string>
    <string name="bind">Bind</string>
</resources>