<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/login"
        android:title="@string/log_out" />

    <item
        android:id="@+id/choose"
        android:title="@string/product" />

    <item
        android:id="@+id/notification"
        android:title="@string/notification" />

<!--    <item-->
<!--        android:id="@+id/share"-->
<!--        android:title="Share preset" />-->

    <item
        android:id="@+id/sync"
        android:title="Cloud sync"
        android:checkable="true"
        app:actionLayout="@layout/menu_switch"
        app:showAsAction="always" />


    <item
        android:id="@+id/version"
        android:title="@string/app_version" />

<!--    <item-->
<!--        android:id="@+id/fwupdate"-->
<!--        android:title="@string/fw_update" />-->

</menu>
