<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/transparentLightBlack"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.375">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <com.serafimtech.serafimplay.tool.AutoResizeTextView
                    android:id="@+id/case_title"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/save_macros"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/preset_name"
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editview_style_round"
                    android:hint="@string/profiles_name"
                    android:inputType="none"
                    android:maxLength="24"
                    android:padding="10dp"
                    android:textColor="@color/deepBlack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/case_title" />

                    <Button
                        android:layout_marginTop="20dp"
                        style="?android:attr/borderlessButtonStyle"
                        android:id="@+id/confirm_btn"
                        android:layout_marginEnd="20dp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_style_login"
                        android:tag="confirm"
                        android:text="@string/confirm"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/cancel_btn"
                        app:layout_constraintTop_toBottomOf="@id/preset_name"/>

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:id="@+id/cancel_btn"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_style_login"
                        android:tag="cancel"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/confirm_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/confirm_btn"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>