<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cardBackgroundColor="@color/transparentLightBlack"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.375">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <com.serafimtech.serafimplay.tool.AutoResizeTextView
                    android:id="@+id/macro_setting_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/macros_setting"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/macro_setting_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/macro_setting_title">

                    <RadioButton
                        android:id="@+id/single_play"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:buttonTint="@color/white"
                        android:checked="true"
                        android:tag="single_play"
                        android:text="@string/play_once"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divided_line"
                        android:background="@color/white" />

                    <RadioButton
                        android:id="@+id/loop_play"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:buttonTint="@color/white"
                        android:tag="loop_play"
                        android:text="@string/play_loop"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divided_line"
                        android:background="@color/white" />

                    <RadioButton
                        android:id="@+id/custom_play"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:buttonTint="@color/white"
                        android:tag="custom_play"
                        android:text="@string/customize_playback"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divided_line"
                        android:background="@color/white" />

                    <RadioButton
                        android:id="@+id/resetmacro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:buttonTint="@color/white"
                        android:tag="resetmacro"
                        android:text="@string/Reset"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/resetmacroview"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divided_line"
                        android:background="@color/white" />

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/macro_setting_interval_times"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/macro_setting_loop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/macro_setting_radio_group">
                    
                    <com.serafimtech.serafimplay.tool.AutoResizeTextView
                        android:id="@+id/macro_setting_interval_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/msjhbd"
                        android:text="@string/play_interval"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/macro_setting_interval_value"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:gravity="start"
                        android:hint=">=0"
                        android:inputType="number"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/lightGray"
                        android:textSize="16sp" />

                    <com.serafimtech.serafimplay.tool.AutoResizeTextView
                        android:id="@+id/macro_setting_times_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/msjhbd"
                        android:text="@string/count"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/macro_setting_times_value"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:gravity="start"
                        android:hint=">0"
                        android:inputType="number"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/lightGray"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/macro_setting_loop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/confirm_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/macro_setting_interval_times">

                    <com.serafimtech.serafimplay.tool.AutoResizeTextView
                        android:id="@+id/macro_setting_loop_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/msjhbd"
                        android:text="@string/play_interval"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/macro_setting_loop_value"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:gravity="start"
                        android:hint=">=0"
                        android:inputType="number"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/lightGray"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/confirm_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_style_login"
                    android:tag="confirm"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/cancel_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/macro_setting_loop" />

                <Button
                    android:id="@+id/cancel_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_style_login"
                    android:tag="cancel"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/confirm_btn"
                    app:layout_constraintTop_toBottomOf="@id/macro_setting_loop" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>